@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -8,6 +8,9 @@
 
 #include "fost-core-test.hpp"
 #include <fost/threading>
+
+#include <chrono>
+#include <thread>
 
 
 FSL_TEST_SUITE( workerpool );
@@ -19,14 +22,14 @@ FSL_TEST_FUNCTION( construction ) {
 
 
 namespace {
-    int quadrupal( int d ) {
-        boost::this_thread::sleep(boost::posix_time::milliseconds(100));
+    int quadrupal(int d) {
+        std::this_thread::sleep_for(std::chrono::milliseconds(100));
         return d * 4;
     }
 }
 FSL_TEST_FUNCTION( simple_function ) {
     fostlib::workerpool pool;
-    boost::function< int ( void ) > quad = boost::lambda::bind( quadrupal, 2000 );
+    std::function< int ( void ) > quad = []() { return quadrupal(2000); };
     fostlib::future< int > q = pool.f<int>( quad );
     FSL_CHECK_EQ( q(), 8000 );
     FSL_CHECK_EQ( pool.available(), 1u );
@@ -38,3 +41,4 @@ FSL_TEST_FUNCTION( simple_function ) {
     FSL_CHECK_EQ( pool.available(), 2u );
     FSL_CHECK_EQ( pool.peak_used(), 2u );
 }
+
