@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2013, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2009-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -17,20 +17,6 @@
 namespace fostlib {
 
 
-    namespace detail {
-
-
-        template< typename R >
-        R execute_future( boost::function< R ( void ) > lambda, boost::function< void ( void ) > completion ) {
-            R r = lambda();
-            completion();
-            return r;
-        }
-
-
-    }
-
-
     /// An unbounded pool of workers
     class FOST_CORE_DECLSPEC workerpool : boost::noncopyable {
         struct implementation;
@@ -43,17 +29,16 @@ namespace fostlib {
             /// Wait for all outstanding work to either terminate or complete
             ~workerpool();
 
-            /// Execute any arbitrary nullary lambda that returns some value in any available worker from the pool.
+            /// Execute any arbitrary nullary lambda that returns some
+            /// value in any available worker from the pool.
             template< typename R >
-            future< R > f( boost::function< R ( void ) > lambda ) {
-                boost::shared_ptr< worker > w = assign();
-                boost::function< void ( void ) > completion = boost::lambda::bind(
-                    &workerpool::replace, this, w
-                );
-                boost::function< R ( void ) > future_lambda = boost::lambda::bind(
-                    &detail::execute_future< R >, lambda, completion
-                );
-                return future< R >( w->run( future_lambda ) );
+            future<R> f(std::function<R(void)> lambda) {
+                boost::shared_ptr<worker> w = assign();
+                return future<R>(w->run<R>([this, w, lambda]() -> R {
+                    R r{lambda()};
+                    this->replace(w);
+                    return r;
+                }));
             }
 
             /// The number of workers not working
